# platform

./: Dockerfile  ansible.cfg  development-environment.yml  inventory  kubernetes-environment.yml  readme.md  server-environment.yml
ansible-tools/: app_installer.yml  get-services.yml  nginx-proxy-manager.yml  pgadmin4.yml  terraform-cleanup.yml
apps/deltalake-app/: pyproject.toml
apps/deltalake-app/deltalake-app/: program1.py  program2.py
apps/elastic-app/: pyproject.toml
apps/elastic-app/elastic-app/: program.py
apps/kafka-app/: Dockerfile  pyproject.toml
apps/kafka-app/devops/: Jenkinsfile
apps/kafka-app/kafka_app/: configuration.py  kafka_config.json  kafka_config.json.orig  program.py
apps/minio-app/: pyproject.toml
apps/minio-app/minio_app/: program.py
apps/s3-app/: pyproject.toml
apps/s3-app/s3-app/: program.py
apps/spark-app/: pyproject.toml
apps/spark-app/spark_app/: program.py  program2.py
apps/streaming-app/: pyproject.toml
apps/streaming-app/streaming-app/: program.py
archive/container/airflow/: init.sh
archive/container/kafka/: docker-compose.yml
archive/container/minio/: docker-compose.yml
archive/container/ozone/: docker-compose.yaml
archive/container/spark/: docker-compose.yml
archive/demo/: .gitignore  README.md  demo.py  pyproject.toml
archive/demo/devops/: Dockerfile  Jenkinsfile
archive/demo/pi/: spark-pi.py
archive/demo/pi/sparkapp/: spark-pi.yaml
archive/demo/project/dags/: customer_data.py  customer_data_2.json  customer_data_2.py  tutorial.py
archive/demo/project/tasks/: Readme.md  extract_data.py  load_data.py  transform_data.py
archive/demo/project/tasks/customer_data/: configuration.json  extract_data.py  load_data.py  transform_data.py
archive/podman/: airflow-podman.yml  spark-podman.yml
archive/podman/airflow/: Dockerfile  requirements.txt
archive/podman/spark/: Dockerfile  entrypoint.sh
archive/tasks/: ingress-nginx.yml  kafka.yml.strimzi  spark.txt  spark.yml
roles/iscsi_common/defaults/: main.yml
roles/iscsi_common/tasks/: main.yml
roles/iscsi_common/templates/: targets.conf.j2
roles/k8s_common/tasks/: base.yml  configurations.yml  containerd.yml  crio.yml  main.yml
roles/k8s_infra/tasks/: main.yml  metallb.yml  nfsstorage.yml  openebs.yml  openelb.yml  purelb.yml
roles/k8s_master/defaults/: main.yml
roles/k8s_master/tasks/: configurations.yml  controlplane.yml  main.yml
roles/k8s_node/defaults/: main.yml
roles/k8s_node/tasks/: configurations.yml  main.yml
roles/virtual_machines/defaults/: main.yml
roles/virtual_machines/tasks/: main.yml
tasks/: airbyte.yml  airflow.yml  cert-manager.yml  dbt-environment.yml  dockerconfig.json.jinja2  elastic.yml  gogs.yml  harbor.yml  jenkins.yml  jupyterhub.yml  kafka.yml  metrics-server.yml  minio.yml  mongodb.yml  monitoring.yml  portainer-agent.yml  portainer-server.yml  postgres.yml  redis.yml  registry-hosts.yml  registry-podman.yml  registry.yml  spark-cluster.yml  spark-environment.yml
tasks/podman/k8s-certbot/: Dockerfile  entrypoint.sh  readme.md
terraform/: cloud_init.cfg  main.tf
terraform-new/: data.tf  locals.tf  main.tf  providers.tf  settings.yaml
terraform-new/modules/k8s-controlplane/: main.tf
terraform/modules/iscsi/: main.tf
terraform/modules/k8s-node/: main.tf
