[tool.poetry]
name = "deltalake-app"
version = "0.1.0"
description = ""
authors = ["john doe <arjan.hulshoff@example.com>"]
readme = "README.md"
packages = [{include = "deltalake_app"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^20.1.0"
pandas = "^2.1.3"
polars = {extras = ["deltalake"], version = "^0.19.19"}
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
