[tool.poetry]
name = "dags"
version = "0.1.0"
description = ""
authors = ["john doe <arjan.hulshoff@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.3.2"
jenkinsapi = "^0.3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
